--- a/Project.html
+++ b/Project.html
@@ -39,7 +39,7 @@
 		</details>
 	</section>
 	<footer>
-		<img src="imgs/logo.png" title="logo" alt="logo"> This Page is created by Khalil Ahmad & Colleen van Lent. To learn more about web design, visit <a href="http://www.intro-webdesign.com/"> Intro to Web design</a>
+		<img src="logo.png" title="logo" alt="logo"> This Page is created by Khalil Ahmad & Colleen van Lent. To learn more about web design, visit <a href="http://www.intro-webdesign.com/"> Intro to Web design</a>
 	</footer>
 
 </body>
